--- a/index.html
+++ b/index.html
@@ -6,17 +6,54 @@
   <title>Lakshmi Teja Kumar S | Data Analyst & Power BI Developer</title>
 
   <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #f8fafc;
-      color: #0f172a;
+    :root {
+      --primary: #ff7a18;
+      --dark: #0f172a;
+      --text: #334155;
+      --bg: #f8fafc;
     }
 
-    .container {
-      max-width: 1200px;
-      margin: auto;
-      padding: 60px 20px;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: "Segoe UI", system-ui, sans-serif;
+    }
+
+    body {
+      background: var(--bg);
+      color: var(--text);
+      line-height: 1.6;
+    }
+
+    /* NAVBAR */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 80px;
+      background: #ffffff;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    .logo {
+      font-weight: 700;
+      font-size: 20px;
+      color: var(--dark);
+    }
+
+    nav a {
+      margin-left: 30px;
+      text-decoration: none;
+      color: var(--text);
+      font-weight: 500;
+    }
+
+    nav a:hover {
+      color: var(--primary);
     }
 
     /* HERO */
@@ -24,91 +61,90 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      padding: 80px;
       gap: 60px;
-      margin-bottom: 80px;
     }
 
     .hero-text {
-      flex: 1;
-      animation: fadeUp 1s ease;
+      max-width: 520px;
+      animation: fadeUp 1s ease forwards;
+    }
+
+    .hero-text span {
+      color: var(--primary);
+      font-weight: 600;
+      letter-spacing: 1px;
+      font-size: 14px;
     }
 
     .hero-text h1 {
-      font-size: 44px;
-      margin-bottom: 10px;
+      font-size: 52px;
+      color: var(--dark);
+      margin: 15px 0;
+      line-height: 1.2;
     }
 
-    .hero-text h2 {
-      font-size: 20px;
-      font-weight: 500;
-      color: #2563eb;
-      margin-bottom: 20px;
+    .hero-text h1 strong {
+      color: var(--primary);
     }
 
     .hero-text p {
-      font-size: 17px;
-      line-height: 1.7;
-      margin-bottom: 25px;
-      color: #334155;
+      margin: 20px 0 30px;
+      font-size: 16px;
     }
 
-    .btn {
+    .buttons a {
       display: inline-block;
-      background: #2563eb;
-      color: white;
-      padding: 12px 22px;
-      border-radius: 6px;
+      padding: 14px 28px;
+      border-radius: 30px;
       text-decoration: none;
-      font-size: 15px;
+      font-weight: 600;
+      margin-right: 15px;
+      transition: all 0.3s ease;
     }
 
+    .btn-primary {
+      background: var(--primary);
+      color: #fff;
+    }
+
+    .btn-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(255,122,24,0.3);
+    }
+
+    .btn-outline {
+      border: 2px solid var(--primary);
+      color: var(--primary);
+    }
+
+    .btn-outline:hover {
+      background: var(--primary);
+      color: #fff;
+    }
+
+    /* HERO IMAGE */
     .hero-img {
-      flex: 0.9;
-      text-align: center;
-      animation: fadeIn 1.2s ease;
+      position: relative;
+      animation: fadeIn 1.2s ease forwards;
     }
 
     .hero-img img {
-      width: 320px;
-      height: 320px;
+      width: 420px;
+      height: 520px;
       object-fit: cover;
-      border-radius: 50%;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+      border-radius: 20px;
+      box-shadow: 0 30px 60px rgba(0,0,0,0.15);
     }
 
     /* SECTIONS */
     section {
-      margin-bottom: 70px;
-      animation: fadeUp 1s ease;
+      padding: 80px;
     }
 
-    section h3 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-
-    section p {
-      font-size: 16px;
-      line-height: 1.7;
-      color: #334155;
-    }
-
-    /* SKILLS */
-    .skills span {
-      display: inline-block;
-      background: #e2e8f0;
-      padding: 10px 14px;
-      border-radius: 6px;
-      margin: 6px;
-      font-size: 14px;
-    }
-
-    /* PROJECTS */
-    .card {
-      background: white;
-      padding: 25px;
-      border-radius: 10px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.08);
+    section h2 {
+      font-size: 36px;
+      color: var(--dark);
       margin-bottom: 20px;
     }
 
@@ -123,106 +159,88 @@
       to { opacity: 1; }
     }
 
+    /* RESPONSIVE */
     @media (max-width: 900px) {
+      header {
+        padding: 20px 30px;
+      }
+
       .hero {
         flex-direction: column-reverse;
         text-align: center;
+        padding: 60px 30px;
+      }
+
+      .hero-img img {
+        width: 300px;
+        height: 380px;
+      }
+
+      nav {
+        display: none;
       }
     }
   </style>
 </head>
+
 <body>
 
-  <div class="container">
+  <!-- NAV -->
+  <header>
+    <div class="logo">Lakshmi Teja Kumar</div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#education">Education</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <!-- HERO -->
-    <div class="hero">
-      <div class="hero-text">
-        <h1>Lakshmi Teja Kumar S</h1>
-        <h2>Data Analyst & Power BI Developer</h2>
-        <p>
-          Data Analyst with 4+ years of experience delivering enterprise BI solutions.
-          Specialized in Power BI, SQL, data modeling, and KPI-driven dashboards that
-          enable faster and smarter business decisions.
-        </p>
-        <a class="btn" href="#projects">View My Work</a>
-      </div>
-
-      <div class="hero-img">
-        <img src="assets/profile.jpg" alt="Lakshmi Teja Kumar">
+  <!-- HERO -->
+  <section class="hero" id="home">
+    <div class="hero-text">
+      <span>WELCOME TO MY PORTFOLIO</span>
+      <h1>
+        Hi, I'm <strong>Lakshmi Teja</strong><br/>
+        Data Analyst & Power BI Developer
+      </h1>
+      <p>
+        Data Analyst with 4+ years of experience delivering enterprise BI solutions.
+        Specialized in Power BI, SQL, data modeling, and KPI-driven dashboards
+        that enable smarter business decisions.
+      </p>
+      <div class="buttons">
+        <a href="#projects" class="btn-primary">View Projects</a>
+        <a href="#contact" class="btn-outline">Contact Me</a>
       </div>
     </div>
 
-    <!-- ABOUT -->
-    <section>
-      <h3>About Me</h3>
-      <p>
-        I am a Power BI Developer and Data Analyst with hands-on experience in building
-        scalable dashboards, integrating data from multiple sources, and translating
-        complex datasets into actionable insights for business stakeholders.
-      </p>
-    </section>
+    <div class="hero-img">
+      <img src="assets/profile.jpg" alt="Lakshmi Teja Kumar">
+    </div>
+  </section>
 
-    <!-- SKILLS -->
-    <section>
-      <h3>Skills</h3>
-      <div class="skills">
-        <span>Power BI</span>
-        <span>DAX</span>
-        <span>SQL</span>
-        <span>SQL Server</span>
-        <span>Snowflake</span>
-        <span>Power Query</span>
-        <span>Data Modeling</span>
-        <span>Excel</span>
-        <span>Python</span>
-        <span>ETL</span>
-        <span>Row Level Security</span>
-      </div>
-    </section>
+  <!-- PLACEHOLDER SECTIONS -->
+  <section id="education">
+    <h2>Education</h2>
+    <p>Details will be added.</p>
+  </section>
 
-    <!-- PROJECTS -->
-    <section id="projects">
-      <h3>Projects & Dashboards</h3>
+  <section id="experience">
+    <h2>Experience</h2>
+    <p>Details will be added.</p>
+  </section>
 
-      <div class="card">
-        <h4>Enterprise Sales & Operations Dashboard</h4>
-        <p>
-          Built interactive Power BI dashboards integrating SQL, Excel, and Snowflake
-          data sources to track sales performance, margins, and operational KPIs.
-          Improved reporting accuracy by 25%.
-        </p>
-      </div>
+  <section id="projects">
+    <h2>Projects</h2>
+    <p>Power BI dashboards and analytics projects will be showcased here.</p>
+  </section>
 
-      <div class="card">
-        <h4>Supply Chain Analytics Dashboard</h4>
-        <p>
-          Designed KPI-driven dashboards for demand forecasting and inventory analysis,
-          reducing manual reporting effort by 30%.
-        </p>
-      </div>
-    </section>
-
-    <!-- ACHIEVEMENTS -->
-    <section>
-      <h3>Achievements</h3>
-      <p>
-        • Overall Best Employee – Division Two<br/>
-        • Excellence in Quality & Productivity (94%+ data accuracy)<br/>
-        • Most Innovative Employer Award (Power BI innovations)
-      </p>
-    </section>
-
-    <!-- INTERESTS -->
-    <section>
-      <h3>Interests & Hobbies</h3>
-      <p>
-        Data visualization, exploring analytics trends, continuous learning,
-        mentoring, and problem-solving through data.
-      </p>
-    </section>
-
-  </div>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: lakshmitejakumar.sriperumbudur@gmail.com</p>
+  </section>
 
 </body>
 </html>
